pavan/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  nginx-svc
  labels:
    app: nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    #nodePort: 30003
    protocol: TCP
  selector:
    app: nginx
